2016-07-07  Oliver Lemke  <olemke@core-dump.info>

	* arts-2-3-505

	* controlfiles/instruments/mviri, controlfiles/instruments/seviri:

	Added setup for mviri and seviri from Max Schaper. Adapted original
	files to work with the latest arts. Added reference files for ybatch
	results. Use with care, setups need further verification of results.

	* controlfiles/CMakeLists.txt:

	Added seviri and mviri as "nocheck" cases.

2016-07-06  Oliver Lemke  <olemke@core-dump.info>

	* arts-2-3-504

	* CMakeLists.txt:

	Added workaround for systems that use the atlas lapack implementation
	with cblas, e.g. the DKRZ supercomputer mistral. Lapack detection in
	those cases fails because the default cmake lapack check does not
	detect the cblas library.

	* cmake/modules/FindCblasLapack.cmake:

	Added simple cblas+lapack detection.

2016-07-01  Oliver Lemke  <olemke@core-dump.info>

	* arts-2-3-503

	* cmake/modules/FindNetCDF.cmake:

	Remove unused library dependency on netcdf_c++.

2016-06-24  Oliver Lemke  <olemke@core-dump.info>

	* arts-2-3-502

	* src/m_batch.cc (ybatchCalc):

	Resize all elements of the ybatch* WSVs to 0. Before it could happen
	that old values are still present if ybatchCalc is called more than
	once with an ARTS release build. Fixes bug reported by Freddy.

2016-06-16 Jana Mendrok  <jana.mendrok@chalmers.se>

	* arts-2-3-501

	* src/continua.cc (xsec_continuum_tag):
	Added frequency and temperature limit checks for liquidcloud ELL07 &
	MPM93 and rain MPM93 absorption models.

	* methods.cc (AtmRawRead):
	Tried to improve documentation, giving some hints for handling of
	cloud/precip as absorption species.

2016-06-06  Oliver Lemke  <olemke@core-dump.info>

	* arts-2-3-500

	* src/xml_io_compound_types.cc (xml_read_from_stream):

	Better error message if the user tries to read a broken GriddedField
	file with a wrong tag for *ArrayOfString*. Only occurs if user decides
	to manually create XML files instead of using proper tools such as